<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/audio_item_padding">
       <TextView
           android:id="@+id/my_audio_item_order"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerVertical="true"
           android:padding="@dimen/audio_item_padding"
           android:textSize="@dimen/audio_order_text_size"
           android:textColor="@color/audio_order_text_color"
           android:text="@string/audio_item_order"/>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginLeft="@dimen/audio_item_marginLeft"
           android:layout_toRightOf="@+id/my_audio_item_order">
           <TextView
               android:id="@+id/my_audio_item_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:lines="1"
               android:textSize="@dimen/audio_name_text_size"
               android:textColor="@color/audio_name_text_color"
               android:text="@string/audio_item_name"/>
           <TextView
               android:id="@+id/my_audio_item_other"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:lines="1"
               android:textSize="@dimen/audio_other_text_size"
               android:textColor="@color/audio_other_text_color"
               android:text="@string/audio_item_other"/>
       </LinearLayout>
</RelativeLayout>
